--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
 	<title>What's Going on With CSS?</title>
 	<link rel="stylesheet" media="all" href="c/css/slides.core.css" />
 	<link rel="stylesheet" media="all" href="c/css/slides.demos.css" />
+	
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-24386968-1']);
+	  _gaq.push(['_setDomainName', '.tylergaw.com']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
 </head>
 <body>
 	<a id="prev" class="transport-control">prev</a>
@@ -999,18 +1014,5 @@
 	
 	<script type="text/javascript" src="c/js/jquery-1.4.2.min.js"></script>
 	<script type="text/javascript" src="c/js/slideshow.js"></script>
-	<script type="text/javascript">
-
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-1104578-11']);
-	  _gaq.push(['_trackPageview']);
-
-	  (function() {
-	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-
-	</script>
 </body>
 </html>
